# idc-index-data

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  collections_index_schema.json  hatch_build.py  noxfile.py  pyproject.toml  pytest.ini  requirements-cd.txt  setup.py
.github/: CONTRIBUTING.md  copilot-instructions.md  get_latest_index.py
.github/workflows/: cd.yml  ci.yml  external-indices.yml  gcs-cors-cron.yml  keep-alive.yml
assets/: README.md  ann_group_index.sql  ann_index.sql  clinical_index.sql  contrast_index.sql  ct_index.sql  mr_index.sql  prior_versions_index.sql  pt_index.sql  rtstruct_index.sql  seg_index.sql  sm_index.sql  sm_instance_index.sql  version_metadata_index.sql
docs/: conf.py  index.md
docs/dev/: adding-new-index.md  repository-overview.md
scripts/gdc/: IDC_GDC_MAPPING.md  check_gdc_patients.py  gdc_parquet_generator.py  idc_gdc_selection.sql
scripts/python/: add_parquet_provenance.py  compare_parquet.py  external-indices.py  generate-indices.py  idc_index_builder.py  idc_index_data_manager.py  report_index_sizes.py  update_idc_index_version.py
scripts/sql/: analysis_results_index.sql  collections_index.sql  idc_index.sql  pathology_index.sql  prior_versions_index.sql  sm_index.sql  sm_instance_index.sql  volume_geometry_index.sql
scripts/tcia/: tcia_parquet_generator.py
src/idc_index_data/: __init__.py  _version.py  _version.pyi
tests/: test_column_description_parser.py  test_gcs_cors.py  test_package.py  test_real_sql_parsing.py
